# modular

bazel/: common.MODULE.bazel
max/kernels/benchmarks/autotune/: BUILD.bazel
max/kernels/benchmarks/misc/comparison/: BUILD.bazel  bench_hopper_decode.py  bench_hopper_decode.yaml  bench_hopper_mla_decode.py  bench_hopper_mla_decode.yaml  bench_hopper_prefill.py  bench_hopper_prefill.yaml
max/kernels/benchmarks/misc/hopper_bench/: BUILD.bazel  wheels.bzl
max/python/max/pipelines/lib/: registry.py
max/python/max/pipelines/lib/config/: config.py
