# ===----------------------------------------------------------------------=== #
#
# This file is Modular Inc proprietary.
#
# ===----------------------------------------------------------------------=== #

"""Pre-built wheel library targets for Hopper benchmark external baselines."""

load("@rules_pycross//pycross:defs.bzl", "pycross_wheel_library")
load("//bazel:api.bzl", "modular_py_library", "requirement")

package(default_visibility = ["//max:consumers"])

# Wrapper to expose cutlass module from nvidia-cutlass-dsl.
modular_py_library(
    name = "cutlass-imports",
    imports = ["../../../../../external/rules_pycross++lock_file+modular_pip_lock_file_repo/deps/nvidia-cutlass-dsl@4.3.0/site-packages/nvidia_cutlass_dsl/python_packages"],
    tags = ["no-pydeps"],  # TODO: Fix and re-enable
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    deps = [requirement("nvidia-cutlass-dsl")],
)

pycross_wheel_library(
    name = "flashinfer",
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    wheel = "@flashinfer_hopper_wheel//file",
    deps = [
        requirement("apache-tvm-ffi"),
        requirement("click"),
        requirement("einops"),
        requirement("ninja"),  # JIT compilation at runtime
        requirement("numpy"),
        requirement("nvidia-cudnn-frontend"),
        requirement("nvidia-cutlass-dsl"),
        requirement("nvitop"),  # provides pynvml via nvidia-ml-py
        requirement("packaging"),
        requirement("requests"),
        requirement("tabulate"),
        requirement("torch"),
        requirement("tqdm"),
    ],
)

pycross_wheel_library(
    name = "flash-attn",
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    wheel = "@flash_attn_hopper_wheel//file",
    deps = [
        ":cutlass-imports",  # adds nvidia_cutlass_dsl/python_packages to sys.path
        requirement("einops"),
        requirement("nvidia-cutlass-dsl"),
        requirement("torch"),
    ],
)
